--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="box box__bg_photo">
             <h1 class="px-12 text-7xl">この夏、最高のイベントが始まる</h1>
         </div>
-        <section class="p-20 bg-white initial-fadein2">
-            <h2 class="text-9xl text-center text-red-300 initial-fadein2">introduction</h2>
+        <section class="p-20 bg-white initial-fadein">
+            <h2 class="text-9xl text-center text-red-300">introduction</h2>
             <p class="text-5xl text-center py-5">はじめに</p>
             <p class="text-5xl py-10">
                 僕は夏に生まれた26歳なので、今年で27回目の夏になる。<br>
@@ -34,7 +34,7 @@
                 特別な夏をもっと特別にする、そんなイベントを用意しました。<br>
             </p>
         </section>
-        <section class="bg-cyan-200 bg-opacity-25 p-20 fadeUpTrigger2">
+        <section class="bg-cyan-200 bg-opacity-25 p-20 initial-fadein">
             <h2 class="text-9xl text-center text-red-300">schedule</h2>
             <p class="text-5xl py-10">こんなスケジュールのイメージです</p>
             <ul class="time-schedule my-5 ml-[150px]">
@@ -81,7 +81,7 @@
                 </li>
             </ul>
         </section>
-        <section class="bg-yellow-400 bg-opacity-25 p-20 fadeUpTrigger2">
+        <section class="bg-yellow-400 bg-opacity-25 p-20  initial-fadein">
             <h2 class="text-9xl text-center text-red-300">feature</h2>
             <h3 class="text-7xl text-center pt-20">#1メイドカフェ</h3>
             <img src="images/maid_cafe.jpg" class="rounded-3xl mx-auto pt-10 cast-img">
@@ -103,7 +103,7 @@
                 さあ、私たちはどちらの祭りを選ぶのか！？
             </p>
         </section>
-        <section class="bg-green-300 bg-opacity-25 p-20 fadeUpTrigger2">
+        <section class="bg-green-300 bg-opacity-25 p-20 initial-fadein">
             <h2 class="text-9xl text-center text-red-300">cast</h2>
             <img src="images/person2.jpg" class="rounded-full mx-auto mt-10 cast-img">
             <p class="text-6xl font-bold text-center my-5">いけちゃん</p>
